opam-version: "2.0"
maintainer: "john.else@citrix.com"
authors: [
  "Anil Madhavapeddy"
  "John Else"
  "Thomas Leonard"
  "Andrew Cooper"
  "David Scott"
]
homepage: "https://github.com/mirage/ocaml-gnt"
doc: "https://mirage.github.io/ocaml-gnt/"
bug-reports: "https://github.com/mirage/ocaml-gnt/issues"
license: "ISC"
depends: [
  "ocaml" {>= "4.08.0" & < "5"}
  "dune" {>= "1.0"}
  "xen-gnt" {= version}
  "lwt"
  "conf-xen"
]
available: [ arch != "s390x" & arch != "ppc64" & arch != "riscv64" ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/ocaml-gnt.git"
synopsis: "Xen grant table bindings for OCaml"
description: """
These are used to create Xen device driver "backends" (servers)
and "frontends" (clients).

This library can be used in both kernelspace (via Mirage) or in userspace
(on Linux). To see a concrete example, have a look at [mirage/ocaml-vchan]
"""
