opam-version: "2.0"
maintainer: "john.else@citrix.com"
authors: [
  "Anil Madhavapeddy"
  "John Else"
  "Thomas Leonard"
  "Andrew Cooper"
  "David Scott"
]
homepage: "https://github.com/mirage/ocaml-gnt"
doc: "https://mirage.github.io/ocaml-gnt/"
bug-reports: "https://github.com/mirage/ocaml-gnt/issues"
license: "ISC"
depends: [
  "ocaml" {>= "4.08.0" & < "5"}
  "dune" {>= "1.0"}
  "cstruct" {>= "1.0.1"}
  "io-page" {>= "2.4.0"}
  "lwt" {>= "2.4.3"}
  "lwt-dllist"
  "cmdliner"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/ocaml-gnt.git"
synopsis: "Xen grant table bindings for OCaml"
description: """
These are used to create Xen device driver "backends" (servers)
and "frontends" (clients).

This library can be used in both kernelspace (via Mirage) or in userspace
(on Linux) via the xen-gnt-unix library.
To see a concrete example, have a look at [mirage/ocaml-vchan]
"""
